# MeshLab-XRay-Shader-cloned-on-Vulkan

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: basic.frag  basic.vert
src/: MeshLoader.cpp  MeshLoader.h  MeshUtils.h  VulkanApp.cpp  VulkanApp.h  VulkanVertex.h  config.h  main.cpp
